--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -14,6 +14,10 @@
     margin-right: 10px;
 }
 
+.feedback__button {
+    text-transform: capitalize;
+}
+
 .feedback__button:hover {
     background-color: blue;
     color: white;
